# pushgo-gateway

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: release.yml
crates/pushgo-app/: Cargo.toml
crates/pushgo-app-oss/: Cargo.toml
crates/pushgo-app-oss/src/: main.rs
crates/pushgo-app-oss/src/providers/: apns.rs  fcm.rs  gateway.rs  mod.rs  wns.rs
crates/pushgo-app/src/: config.rs  main.rs
crates/pushgo-app/src/providers/: apns.rs  fcm.rs  mod.rs  wns.rs
crates/pushgo-core/: Cargo.toml
crates/pushgo-core/src/: app.rs  config.rs  lib.rs  util.rs
crates/pushgo-core/src/api/: docs.html  docs_oss.html  mod.rs  router.rs
crates/pushgo-core/src/api/handlers/: channel.rs  device.rs  mod.rs  push.rs  token.rs
crates/pushgo-core/src/dispatch/: mod.rs
crates/pushgo-core/src/providers/: apns.rs  apns_client.rs  fcm.rs  fcm_client.rs  mod.rs  wns.rs  wns_client.rs
crates/pushgo-core/src/storage/: mod.rs
deploy/: Dockerfile.gh  Dockerfile.oss  pushgo-gateway.service  pushgo.config.example.toml
