[workspace]
members = ["crates/pushgo-core", "crates/pushgo-app", "crates/pushgo-app-oss"]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[workspace.dependencies]
tokio = { version = "1.49.0", features = [
    "macros",
    "signal",
    "rt-multi-thread",
    "sync",
    "time",
] }
arc-swap = { version = "1.8.0" }
async-channel = "2.5.0"
axum = { version = "0.8.8", features = [
    "macros",
    "http1",
    "http2",
    "json",
    "matched-path",
] }
chrono = { version = "0.4.43", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5.54", features = ["derive", "env"] }
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
    "rust_crypto",
    "use_pem",
] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "gzip",
    "http2",
    "form",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
subtle = "2.6.1"
redb = "3.1.0"
dashmap = "6.1.0"
uuid = { version = "1.19.0", features = ["v4"] }
argon2 = "0.5.3"
blake3 = "1.8.3"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
] }
tempfile = "3.24.0"
toml = "0.9.11"
