[package]
name = "pushgo-app-oss"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["PushGo Team <team@pushgo.dev>"]

[[bin]]
name = "pushgo-gateway"
path = "src/main.rs"

[dependencies]
pushgo-core = { path = "../pushgo-core" }
tokio = { workspace = true }
arc-swap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
