[package]
name = "pushgo-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["PushGo Team <team@pushgo.dev>"]

[dependencies]
tokio = { workspace = true }
async-channel = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
subtle = { workspace = true }
reqwest = { workspace = true }
redb = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
blake3 = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
